--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 </body>
 <footer id="footer">
-    <p>© 2019 Kristen Lee Calligraphy</p>
-    <a class="custom-icon" href="">Bear Branded Website #builtbybears</a>
+    <p id="footer-name">© 2019 Kristen Lee Calligraphy</p>
+    <a class="custom-icon" id="footer-tag" href="">Bear Branded Website #builtbybears</a>
 </footer>
 </html>
