--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <title>Practice Page</title>
 </head>
 <body>
+    <!-- HEAD SECTION -->
     <a href=""><img id="logo" src="images/weblogo.png"></a>
     <div id="top-bar">
         <div class="top-control-item">
@@ -23,35 +24,31 @@
               </div>
         </div>
         <div class="top-control-item">
-            <a href="about.html" class="top-btn">ABOUT</a>
+            <a href="" class="top-btn">ABOUT</a>
         </div>
         <div class="top-control-item">
             <a href="" class="top-btn">CONTACT</a>
         </div>
     </div>
 
-    <img src="images/picture-1.jpeg" class="picture">
-
-    <div id="quote-1">
-        <p>“THIS WORLD IS BUT A CANVAS TO OUR IMAGINATION.”</p>
-        <p><b><i>Henry David Thoreau</i></b></p>
+    <!-- BODY SECTION -->
+    <div id="about-section">
+        <p>Kristen Lee Calligraphy and Fine Art is the professional work of Boston based artist Kristen Lee, specializing in classic and modern calligraphy and hand lettering,
+            photo realism portrait art as well as a handful of other various artistic mediums. </p>
+        <br>
+       <p>Eschewing any single style, Kristen's design philosophy is based upon the order and proportion of timeless design principles.
+            She is a lifelong student and self taught artist and calligrapher, who brings 20+ years of artistic experience and knowledge to her work. </p>
+       <br>
+        <p>Offering a variety of services, Kristen welcomes you to her site and encourages you to view her work,
+         and fill out the contact form for questions, pricing, custom design or collaborations.</p>
     </div>
-
-    <div>
-        <img src="images/picture-2.jpg" class="picture" height="600">
-    </div>
-
-    <div id="quote-2">
-        <p>"ALONE WE CAN DO SO LITTLE, TOGETHER WE CAN DO SO MUCH.”</p>
-        <p><b><i>Helen Keller</i></b></p>
-    </div>
-
+    
     <div id="bot-control">
-        <a class="bot-btn" href="about.html">ABOUT</a>
         <a class="bot-btn" href="">CONTACT</a>
     </div>
 
 </body>
+<!-- FOOTER SECTION -->
 <footer>
     <hr class="custom-line">
 
@@ -68,7 +65,7 @@
 
     <div id="footer">
         <p id="footer-name">© 2019 Kristen Lee Calligraphy</p>
-        <a id="footer-tag" href="https://www.bearbranded.com/" target="_blank">Bear Branded Website #builtbybears</a>
+        <a class="custom-icon" id="footer-tag" href="https://www.bearbranded.com/" target="_blank">Bear Branded Website #builtbybears</a>
     </div>
 </footer>
 </html>
