--- a/portrait.html
+++ b/portrait.html
@@ -43,82 +43,72 @@
     </div>
 
     <!-- BODY SECTION -->
-    <div class="callipraphy-control">
-      <img class="calli-img" src="./images/envelopes.jpg" />
+    <div class="callipraphy-control-center">
+      <div class="calli-para-center">
+        <p>
+          Black and white graphite and charcoal reproduction of your favorite
+          photo created using graphite pencil and or charcoal on acid free,
+          heavy weight paper, with a light texture, and sealed with a
+          transparent fixative.
+        </p>
+      </div>
+      <br />
+      <div class="calli-para-center">
+        <p>
+          <b>Tips:</b> If you choose to frame your piece, you can go one of two
+          ways, having it framed professionally or DIY. The mat and the frame
+          are the two important choices.
+        </p>
+      </div>
+    </div>
+
+    <div class="portrait-control">
+      <img class="portrait-img" src="./images/mats.jpg" />
       <div class="calli-para-right">
         <p>
-          <b>ENVELOPES</b> - Hand addressed envelopes for your special event
-          never go unnoticed. In this age of emails and texts a calligraphed
-          envelope feels personal and special, and is often saved as a memento
-          for your special occasion.
+          <b>MATS</b> - Mats simultaneously enhance and protect a portrait by
+          putting space between the artwork and the frame. They come in a wide
+          range of colors and materials and may be used singularly or in
+          combination with each other. A black frame and a white mat accented
+          with second black mat always looks good.
         </p>
       </div>
     </div>
 
-    <div class="callipraphy-control">
+    <div class="portrait-control">
       <div class="calli-para-left">
         <p>
-          <b>SPOT CALLIGRAPHY</b> - A less expensive alternative than hiring a
-          calligrapher to create your whole piece (invitation, quote, etc). The
-          client picks certain important elements of the piece to be
-          calligraphed and paired with a computer generated font.
+          <b>FRAMES</b> - Frames are even more varied than mats. In order to
+          narrow your options keep two things in mind: always have your frame
+          width be thinner than your mat width, and select a frame that best
+          enhances the art not another frame or accessory glass. Glass or
+          acrylic is used to protect paper based artwork. This can create some
+          visual issues caused by glare. There are glass variations that offer
+          anti-glare and UV filtering. Plexiglass, which is an acrylic, is much
+          lighter than glass and is a good alternative for larger pieces of art.
+          Many craft and frame stores sell frames with the mats already
+          included, just pop off the back and place your art inside.
         </p>
       </div>
-      <img class="calli-img" src="./images/spot-callipraphy.jpg" />
+      <img class="portrait-img" src="./images/frames.jpg" />
     </div>
 
-    <div class="callipraphy-control-center">
-      <div class="calli-para-center">
-        <p>
-          <b>PLACE CARDS</b> - traditionally, this was a small folded card
-          placed on the table indicating the guest’s seat. Today people are
-          getting really creative with the materials they are using as well as
-          the formats.
-        </p>
-      </div>
-      <div class="calli-para-center">
-        <p>
-          <b>ESCORT CARDS</b> - typically arranged at the entrance of the
-          reception, these are meant to guide the guest to their table. These
-          can be a creative alternative to a seating chart and give your guests
-          a small meaningful keepsake of a beautiful day.
-        </p>
-      </div>
-      <img
-        class="calli-img"
-        id="placecards-img"
-        src="./images/placecards.jpg"
-      />
+    <div id="web-interfact">
+      <img class="portrait-img-bot" src="./images/baby-1.jpg" />
+      <img class="portrait-img-bot" src="./images/baby-2.jpg" />
+      <img class="portrait-img-bot" src="./images/dog.jpg" />
+      <img class="portrait-img-bot" src="./images/baby-3.jpg" />
     </div>
 
-    <div class="callipraphy-control-center">
-      <div class="calli-para-center">
-        <p>
-          <b>PROGRAMS</b> - may be as simple as just a card or a more
-          extravagant handmade booklet and can be left for guests to read while
-          waiting on the start of the ceremony. Gives the couple an opportunity
-          to include fun info about yourselves, your bridal party, or maybe info
-          about how the night will carry on.
-        </p>
+    <div id="mobile-interfact">
+      <div class="mobile-img">
+        <img class="portrait-img-bot" src="./images/baby-1.jpg" />
+        <img class="portrait-img-bot" src="./images/baby-2.jpg" />
       </div>
-      <br />
-      <div class="calli-para-center">
-        <p>
-          <b>MENUS</b> - a personalized menu can be used to substitute a place
-          card and it’s a great great way to showcase and commemorate the
-          amazing meal to come.
-        </p>
+      <div class="mobile-img">
+        <img class="portrait-img-bot" src="./images/dog.jpg" />
+        <img class="portrait-img-bot" src="./images/baby-3.jpg" />
       </div>
-      <br />
-      <div class="calli-para-center">
-        <p>
-          <b>SINAGE</b> - seating charts, welcome signs and station signs are
-          just a couple of ways to incorporate calligraphy into your event.
-          These are small details that are as practical as they are charming and
-          memorable
-        </p>
-      </div>
-      <img class="calli-img" id="sinage-img" src="./images/sinage.jpg" />
     </div>
 
     <div id="bot-control">
