--- a/pyrography.html
+++ b/pyrography.html
@@ -43,82 +43,32 @@
     </div>
 
     <!-- BODY SECTION -->
-    <div class="callipraphy-control">
-      <img class="calli-img" src="./images/envelopes.jpg" />
-      <div class="calli-para-right">
-        <p>
-          <b>ENVELOPES</b> - Hand addressed envelopes for your special event
-          never go unnoticed. In this age of emails and texts a calligraphed
-          envelope feels personal and special, and is often saved as a memento
-          for your special occasion.
-        </p>
-      </div>
-    </div>
-
-    <div class="callipraphy-control">
-      <div class="calli-para-left">
-        <p>
-          <b>SPOT CALLIGRAPHY</b> - A less expensive alternative than hiring a
-          calligrapher to create your whole piece (invitation, quote, etc). The
-          client picks certain important elements of the piece to be
-          calligraphed and paired with a computer generated font.
-        </p>
-      </div>
-      <img class="calli-img" src="./images/spot-callipraphy.jpg" />
-    </div>
-
     <div class="callipraphy-control-center">
       <div class="calli-para-center">
         <p>
-          <b>PLACE CARDS</b> - traditionally, this was a small folded card
-          placed on the table indicating the guest’s seat. Today people are
-          getting really creative with the materials they are using as well as
-          the formats.
+          The art of burning an image on paper, wood, or leather that is then
+          sealed with a protective varnish. Not often seen, it’s a unique way
+          capture an image or personalize a special item.
         </p>
       </div>
-      <div class="calli-para-center">
-        <p>
-          <b>ESCORT CARDS</b> - typically arranged at the entrance of the
-          reception, these are meant to guide the guest to their table. These
-          can be a creative alternative to a seating chart and give your guests
-          a small meaningful keepsake of a beautiful day.
-        </p>
-      </div>
-      <img
-        class="calli-img"
-        id="placecards-img"
-        src="./images/placecards.jpg"
-      />
     </div>
 
-    <div class="callipraphy-control-center">
-      <div class="calli-para-center">
-        <p>
-          <b>PROGRAMS</b> - may be as simple as just a card or a more
-          extravagant handmade booklet and can be left for guests to read while
-          waiting on the start of the ceremony. Gives the couple an opportunity
-          to include fun info about yourselves, your bridal party, or maybe info
-          about how the night will carry on.
-        </p>
+    <div id="web-interfact">
+      <img class="portrait-img-bot" src="./images/guitar-1.jpg" />
+      <img class="portrait-img-bot" src="./images/guitar-2.jpg" />
+      <img class="portrait-img-bot" src="./images/guitar-3.jpg" />
+      <img class="portrait-img-bot" src="./images/guitar-4.jpg" />
+    </div>
+
+    <div id="mobile-interfact">
+      <div class="mobile-img">
+        <img class="portrait-img-bot" src="./images/guitar-1.jpg" />
+        <img class="portrait-img-bot" src="./images/guitar-2.jpg" />
       </div>
-      <br />
-      <div class="calli-para-center">
-        <p>
-          <b>MENUS</b> - a personalized menu can be used to substitute a place
-          card and it’s a great great way to showcase and commemorate the
-          amazing meal to come.
-        </p>
+      <div class="mobile-img">
+        <img class="portrait-img-bot" src="./images/guitar-3.jpg" />
+        <img class="portrait-img-bot" src="./images/guitar-4.jpg" />
       </div>
-      <br />
-      <div class="calli-para-center">
-        <p>
-          <b>SINAGE</b> - seating charts, welcome signs and station signs are
-          just a couple of ways to incorporate calligraphy into your event.
-          These are small details that are as practical as they are charming and
-          memorable
-        </p>
-      </div>
-      <img class="calli-img" id="sinage-img" src="./images/sinage.jpg" />
     </div>
 
     <div id="bot-control">
